fix image layout on small screens

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -60,6 +60,13 @@
 	margin-right: 20px;
 }
 
+@media (min-width: 0px) and (max-width: 400px) {
+	.img-gallery {
+		margin-right: 0px;
+		max-width: 100% !important;
+	}
+}
+
 .flyers img {
 	max-width: 400px;
 }
